fix compat issue on Safari 14

--- a/src/zip-manager/components/styles/DownloadManager.css
+++ b/src/zip-manager/components/styles/DownloadManager.css
@@ -1,5 +1,6 @@
 .downloads {
   min-block-size: 5vh;
+  overflow-y: auto;
   overflow-block: auto;
   flex: 1;
   scrollbar-color: var(--button-color) transparent;
