--- a/src/zip-manager/components/styles/Entries.css
+++ b/src/zip-manager/components/styles/Entries.css
@@ -28,6 +28,7 @@
 .entries .entry-name {
   display: flex;
   user-select: none;
+  overflow-x: hidden;
   overflow-inline: hidden;
   column-gap: 0.25ch;
   flex: 1;
