--- a/src/zip-manager/styles/Dialog.css
+++ b/src/zip-manager/styles/Dialog.css
@@ -45,6 +45,7 @@ dialog form p {
   margin: 0;
   padding-block-start: 0.25em;
   padding-block-end: 1em;
+  overflow-y: auto;
   overflow-block: auto;
 }
 
